feat(food): add flow for edit food weight and recalculate calories and day total
