# src/food/dto/index.ts
@@ -2,3 +2,4 @@ export { AddFoodDto } from './add-food.dto';
 export { AddFoodFromTextDto } from './add-food-from-text.dto';
 export { FoodResponseDto } from './food-response.dto';
 export { ItemFoodDto } from './item-food.dto';
+export { UpdateFoodWeightDto } from './update-food-weight.dto';
